force-app/main/default/objects/Product2/fields/Last_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Ordered_Date__c</fullName>
    <label>Last Ordered Date</label>
    <type>Date</type>
</CustomField>