force-app/main/default/objects/Product2/fields/Product_Image_Width__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_Width__c</fullName>
    <defaultValue>60</defaultValue>
    <inlineHelpText>Image Width</inlineHelpText>
    <label>Product Image Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>