force-app/main/default/objects/Product2/fields/Standard_Pricebook_Price__c.field-meta.xml
<CustomField>
    <fullName>Standard_Pricebook_Price__c</fullName>
    <label>Standard Pricebook Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>